--- a/index.html
+++ b/index.html
@@ -1,1 +1,253 @@
-Hello world!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <title>Antoine Gu&eacutedon</title>
+ <meta name="description" content="Antoine Gu&eacutedon"/>
+ <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+ <meta charset="utf-8">
+
+ <!--Facebook-->
+ <meta property="og:image" content="https://anttwo.github.io/MACARONS/example.png">
+ <meta property="og:image:type" content="image/jpg">
+ <meta property="og:image:width" content="600">
+ <meta property="og:image:height" content="400">
+ <meta property="og:type" content="website"/>
+ <meta property="og:url" content="https://anttwo.github.io/"/>
+ <meta property="og:title" content="MACARONS"/>
+ <meta property="og:description" content="Personal webpage of Antoine Gu&eacutedon."/>
+
+ <!--Twitter-->
+ <meta name="twitter:card" content="summary_large_image" />
+ <meta name="twitter:title" content="Antoine Gu&eacutedon" />
+ <meta property="twitter:description" content="Personal webpage of Antoine Gu&eacutedon."/>
+ <meta name="twitter:image" content="https://anttwo.github.io/MACARONS/example.png">
+
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+ <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
+ <!-- <link href="http://fonts.googleapis.com/css?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">  -->
+ 
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+ <script src="https://kit.fontawesome.com/bacac70704.js" crossorigin="anonymous"></script>
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+ <link rel="shortcut icon" href="resrc/icons/mathis_square_thumb_nobg.jpg">
+
+ <link href="style.css" rel="stylesheet">
+
+<!--  Google Analytics (DO NOT copy/paste following section, setup your own analytics tag at https://analytics.google.com/analytics/web/)  -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CDL4R10HKE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CDL4R10HKE');
+</script>
+<!-- End Google Analytics -->
+
+</head>
+
+<body>
+    <div class="container" style="padding-top:2rem;">
+        <div class="col-lg-6" style="text-align:left; font-size: xx-large;">
+            <div class="row" style="padding-left: 1.5rem;">
+                <h1 style="font-size: 70px;">Antoine Gu&eacutedon</h1>
+                <h1 style="font-size: 55px;">PhD Student</h1>
+            </div>
+          <a href="https://imagine.enpc.fr/" style="font-weight: 400;">IMAGINE</a> /
+          <a href="http://ligm.u-pem.fr/accueil/" style="font-weight: 400;">LIGM</a><br>
+          <a href="https://www.ecoledesponts.fr/en">&Eacutecole des Ponts ParisTech (ENPC)</a>
+          <p style="font-size: large;">
+            6-8, Av Blaise Pascal - Cit&eacute Descartes <br>
+            Champs-sur-Marne <br>
+            77455 Marne-la-Vall&eacutee cedex 2 <br>
+            France <br>
+            &#9993 antoine (dot) guedon (at) enpc.fr <br>
+        </div>
+        
+        <div class="col-lg-6" style="text-align:center; padding-top: 2rem;">
+          <img src="./media/profile.jpg" alt="Profile picture" style="height: 400px;"><br>
+
+          <h5 style="padding-top: 5px;">
+            <a href="mailto:antoine.guedon@enpc.fr" title="e-Mail" target="_blank"><i class="fa fa-envelope-square fa-3x"></i></a>
+            <a href="https://github.com/Anttwo" title="GitHub" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/antoine-gu%C3%A9don-3a50b0156/" title="LinkedIn" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
+	        <a href="https://scholar.google.com/citations?user=uvg-I8sAAAAJ&hl=fr&oi=ao" title="Google Scholar" target="_blank"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+	        <a href="https://arxiv.org/search/cs?query=Gu%C3%A9don%2C+A&searchtype=author&abstracts=show&order=-announced_date_first&size=50" target="_blank"><i class="ai ai-arxiv-square ai-3x"></i></a>
+        </h5>
+
+        </div>
+       </div>
+
+    <div class="container">
+        <h2>Introduction</h2>
+        <hr/>
+        <p> I am a PhD student in the IMAGINE computer vision team of &Eacutecole des Ponts ParisTech (ENPC) and 
+            I am co-advised by <a href="https://vincentlepetit.github.io/">Vincent Lepetit (ENPC)</a> and 
+            <a href="https://imagine.enpc.fr/~monasse/">Pascal Monasse (ENPC)</a>.
+            I am mostly interested in Image-Based Rendering (IBR) and 3D reconstruction using deep learning approaches. 
+            In particular, I worked on developing scalable approaches
+            for simultaneously learning to reconstruct and explore 3D environments. 
+            More recently, I have been working on Novel View Synthesis. 
+            Before that, I studied at the Ecole polytechnique as well as the &Eacutecole normale sup&eacuterieure Paris-Saclay 
+            where I obtained the MVA MS degree. </p>
+    </div>
+
+    <div class="container">
+        <h2>News</h2>
+        <hr/>
+        <p class="label date">03-2023</p> <a href="https://anttwo.github.io/MACARONS/">MACARONS</a> paper has been accepted to CVPR 2023!<br>
+        <p class="label date">11-2022</p> <a href="https://arxiv.org/abs/2208.10449">SCONE</a> paper has received a Spotlight at NeurIPS 2022!<br>
+        <p class="label date">08-2022</p> <a href="https://arxiv.org/abs/2208.10449">SCONE</a> paper has been accepted to NeurIPS 2022!<br>
+        <p class="label date">09-2021</p> I'm starting my PhD!<br>
+    </div>
+
+    <!-- Publications -->
+    <div class="container">
+        <h2>Publications</h2>
+        <hr/>
+
+        <!-- SuGaR -->
+        <div class="container" style="text-align:left; padding-top: 2rem; padding-bottom: 2rem;">
+            <div class="col-lg-4" style="text-align:left; padding-top: 2rem;">
+                <a href="https://anttwo.github.io/sugar/">
+                    <img src="./media/sugar.png" alt="sugar" style="width: 350px;">
+                </a>
+            </div>
+            <div  class="col-lg-8" style="text-align: left;">
+                <a href="https://anttwo.github.io/sugar/">
+                    <h4>SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering</h4>
+                </a>
+                <p style="font-size: 20px;">arXiv 2023</p>
+                <div>
+                    <a href="https://anttwo.github.io/"><b>Antoine Gu&eacutedon</b></a>, 
+                    <a href="https://vincentlepetit.github.io/">Vincent Lepetit</a>
+                </div>
+                We introduce a method that extracts accurate and editable meshes 
+                from 3D Gaussian Splatting representations within minutes on a single GPU. 
+                This enables easy editing, sculpting, rigging, animating, or relighting of the Gaussians using traditional softwares 
+                (Blender, Unity, Unreal Engine, etc.) by manipulating the mesh instead of the Gaussians themselves. <br>
+                <a class="label label-info" href="https://arxiv.org/abs/2311.12775"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
+                <a class="label label-info" href="https://github.com/Anttwo/SuGaR"><i class="fa fa-code fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Code (coming soon)</a>
+                <!-- <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX</a> -->
+                <a class="label label-info" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                    <i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX
+                </a>
+                <div class="collapse" id="collapse3">
+                    <div class="card">
+                        <div class="card-block">
+                            <pre class="card-text clickselect">
+                                @misc{guedon2023sugar,
+                                    title={SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering}, 
+                                    author={Antoine Guédon and Vincent Lepetit},
+                                    year={2023},
+                                    eprint={2311.12775},
+                                    archivePrefix={arXiv},
+                                    primaryClass={cs.GR}
+                              }
+                        </div>
+                      </div>
+                </div>
+
+            </div>
+        </div><br>
+        
+        <!-- MACARONS -->
+        <div class="container" style="text-align:left; padding-top: 2rem; padding-bottom: 2rem;">
+            <div class="col-lg-4" style="text-align:left; padding-top: 2rem;">
+                <a href="https://anttwo.github.io/MACARONS/">
+                    <img src="./media/macarons.png" alt="macarons" style="width: 350px;">
+                </a>
+            </div>
+            <div  class="col-lg-8" style="text-align: left;">
+                <a href="https://anttwo.github.io/MACARONS/">
+                    <h4>MACARONS: Mapping And Coverage Anticipation with RGB ONline Self-supervision</h4>
+                </a>
+                <p style="font-size: 20px;">CVPR 2023</p>
+                <div>
+                    <a href="https://anttwo.github.io/"><b>Antoine Gu&eacutedon</b></a>, 
+                    <a href="https://www.tmonnier.com/">Tom Monnier</a>, 
+                    <a href="https://imagine.enpc.fr/~monasse/">Pascal Monasse</a>, 
+                    <a href="https://vincentlepetit.github.io/">Vincent Lepetit</a>
+                </div>
+                We introduce a novel method that simultaneously learns to explore new large
+                environments and to reconstruct them in 3D from color images only, in a self-supervised fashion.<br>
+                <a class="label label-info" href="https://arxiv.org/abs/2303.03315"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
+                <a class="label label-info" href="https://github.com/Anttwo/MACARONS"><i class="fa fa-code fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Code</a>
+                <!-- <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX</a> -->
+                <a class="label label-info" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                    <i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX
+                </a>
+                <div class="collapse" id="collapse2">
+                    <div class="card">
+                        <div class="card-block">
+                            <pre class="card-text clickselect">
+                                @inproceedings{guedon2023macarons,
+                                    title={{MACARONS: Mapping And Coverage Anticipation with RGB ONline Self-supervision}},
+                                    author={Gu&eacutedon, Antoine and Monnier, Tom and Monasse, Pascal and Lepetit, Vincent},
+                                    booktitle={{CVPR}},
+                                    year={2023},
+                                }
+                            </pre>
+                        </div>
+                      </div>
+                </div>
+
+            </div>
+        </div><br>
+
+        <!-- SCONE -->
+        <div class="container" style="text-align:left; padding-top: 2rem; padding-bottom: 2rem;">
+            <div class="col-lg-4" style="text-align:left; padding-top: 2rem;">
+                <a href="https://arxiv.org/abs/2208.10449">
+                    <img src="./media/scone.png" alt="scone" style="width: 350px;">
+                </a>
+            </div>
+            <div  class="col-lg-8" style="text-align: left;">
+                <a href="https://arxiv.org/abs/2208.10449">
+                    <h4>SCONE: Surface Coverage Optimization in uNknown Environments by Volumetric Integration</h4>
+                </a>
+                <p style="font-size: 20px;">NeurIPS 2022 (Spotlight)</p>
+                <div>
+                    <a href="https://anttwo.github.io/"><b>Antoine Gu&eacutedon</b></a>, 
+                    <a href="https://imagine.enpc.fr/~monasse/">Pascal Monasse</a>, 
+                    <a href="https://vincentlepetit.github.io/">Vincent Lepetit</a>
+                </div>
+                We introduce a novel approach to solve the Next Best View problem for dense 3D reconstruction in unknown environments. 
+                Contrary to other learning-based methods, 
+                our approach scales to large 3D scenes and handles completely free camera motion at inference.<br>
+                <a class="label label-info" href="https://arxiv.org/abs/2208.10449"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
+                <a class="label label-info" href="https://github.com/Anttwo/MACARONS"><i class="fa fa-code fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Code</a>
+                <!-- <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX</a> -->
+                <a class="label label-info" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                    <i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX
+                </a>
+                <div class="collapse" id="collapse1">
+                    <div class="card">
+                        <div class="card-block">
+                            <pre class="card-text clickselect">
+                                @inproceedings{guedon2022scone,
+                                    title={{SCONE: Surface Coverage Optimization in Unknown Environments by Volumetric Integration}},
+                                    author={Gu\'edon, Antoine and Monasse, Pascal and Lepetit, Vincent},
+                                    booktitle={{Advances in Neural Information Processing Systems}},
+                                    year={2022},
+                                  }
+                            </pre>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <p style="text-align: center; padding-top: 2rem; font-size: 15px;">
+        &copy You are welcome to copy the code, please attribute the source with a link back to this page.<br>
+        Template inspired from <a href="https://www.tmonnier.com/">Tom Monnier</a> and <a href="https://mathis.petrovich.fr/">Mathis Petrovich</a>.
+    </p>
+
+</body>
