--- a/sugar/index.html
+++ b/sugar/index.html
@@ -80,7 +80,7 @@
    <div class="col-xs-12">
    <h3 style="text-align:center; padding-bottom:1rem">
      <a class="label label-info" href="https://arxiv.org/abs/2311.12775"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
-     <a class="label label-info" href="https://github.com/Anttwo/SuGaR"><i class="fa fa-code fa-lg" style="vertical-align: top; margin-top: 6px"></i>&nbsp;&nbsp;Code (coming soon)</a>
+     <a class="label label-info" href="https://github.com/Anttwo/SuGaR"><i class="fa fa-code fa-lg" style="vertical-align: top; margin-top: 6px"></i>&nbsp;&nbsp;Code</a>
      <a class="label label-info" href="https://github.com/Anttwo/SuGaR"><i class="fa fa-gamepad fa-lg" style="vertical-align:top; margin-top:5px"></i>&nbsp;&nbsp;Demo (coming soon)</a>
      <!-- <a class="label label-info" href="https://youtu.be/8_QNKaCyr4Y"><i class="fa fa-area-chart fa-lg" style="vertical-align:top;margin-top:6px"></i>&nbsp;&nbsp;Presentation</a> -->
      <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:top;margin-top:6px"></i>&nbsp;&nbsp;BibTeX</a>
@@ -618,7 +618,7 @@
        border-radius:0.5em;"></a> -->
    </div>
    <div class="col-xs-4 col-lg-6">
-     <h4>Code (coming soon)</h4>
+     <h4>Code</h4>
      <a href="https://github.com/Anttwo/SuGaR" style="color:inherit;"></a>
        <!-- <img src="" alt="github_repo.png" class="text-center" style="max-width:70%; border:0.15em solid;
        border-radius:0.5em;"> -->
