--- a/sugar/index.html
+++ b/sugar/index.html
@@ -90,7 +90,7 @@
 
  <div class="row" style="padding:2rem">
    <div class="col-xs-12">
-   <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaBwDP2VQwJMsCUViMZtXLnGGLsOFLjK0AHNckojdoC8zAHbgrlLTDvH0csnA2p7V7FB3OB0QPTOyXdF8Qq7nbpjx0yVFA=s1600" alt="full_teaser.png" class="text-center" style="width: 99%; max-width: 1920px">
+   <img src="https://anttwo.github.io/sugar/results/full_teaser.png" alt="full_teaser.png" class="text-center" style="width: 99%; max-width: 1920px">
    <!-- <video autoplay loop muted playsinline src="teaser.mp4" style="width:95%; max-width: 900px"></video> -->
    <!--<img src="teaser.gif" alt="teaser.gif" class="text-center" style="width: 95%; max-width: 900px">-->
    <div class="wrapper">
@@ -396,12 +396,12 @@
     <div class="col-xs-12">
     <div class="wrapper" style="text-align: center">
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaDyQPXSs1n6FMWCeHbYxSal--_hQahU-T0XxDguqEP8qBU1crLHU67PxHXg6-qRl_x4dLxlTt3MfxQUi6A_MzM9sfy6=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/garden/garden_sugar_render_2.png" 
         alt="kitchen_render.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh rendered with bound Gaussians
       </div>
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaCLc44aZmr8bYvwgT8ucrLf9itEU38P0hZSqjWW54wNObnxl3n_8UhsgfX5Zu4jMeIgYcoFz6ZfXIPesJNEfITpjWRDhw=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/garden/full_sugar_2bis.png" 
         alt="kitchen_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh without texture
       </div>
@@ -425,12 +425,12 @@
     <div class="col-xs-12">
     <div class="wrapper" style="text-align: center">
       <div class="col-xs-4 col-lg-4">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaCzNskxZIdb7Cjgi_z6RE3d8qhVSHaHuCujKpVSo_EASvX7R2N38JpDCC55xfazGrmTVgVOyNTq5e9hOtvd3zZFlPg5_w=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/knight/0173.png" 
         alt="kitchen_render.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh with bound Gaussians
       </div>
       <div class="col-xs-4 col-lg-4">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaAdSSqI1k0i5BnDslj9OPZwOA5VXJl1ANzIfP3o7ZWXuEetAAeIReSEbl1YfHAXvTshxKq0Le9nbnarI8JlxVJRqkgNQQ=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/knight/0173 (1).png" 
         alt="kitchen_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh without texture
       </div>
