--- a/sugar/index.html
+++ b/sugar/index.html
@@ -454,12 +454,12 @@
     <div class="col-xs-12">
     <div class="wrapper" style="text-align: center">
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaBwzKsPZDKAs_Pn-Yl9qrDdd_P7VdU2UqB9BiAut_PWZ1ZI4QVI_aB1nSzDDTd77FDrdydykSmc21NKax9yKhM631izgw=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/gundam/0047.png" 
         alt="kitchen_render.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh rendered with bound Gaussians
       </div>
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaCUCjUlsHhVUQmNHjRPKKYIngbFb9Sco86rAdCX8_u0OGbv6cpVZYbEgV9heWOjHSxCyCZY5uR5vwSBqPE5ypqM34JJVw=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/gundam/0047 (1).png" 
         alt="kitchen_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh without texture
       </div>
@@ -483,12 +483,12 @@
     <div class="col-xs-12">
     <div class="wrapper" style="text-align: center">
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaCA8cadspueRUf472pRma3D8m4TgTLyr64tFRO3ZKsRnAdkyvQ1xl43M5Gfcj1iB9nluI1A7lWXC1JDyRNM95Mse1ErPQ=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/bonsai/0239.png" 
         alt="kitchen_render.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh rendered with bound Gaussians
       </div>
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaDlWAinXaVQJS-KQpHSBIo5LnLiWzD5mmHnroAuLgMeLFkVvTi15Zbzi1mlN15W1nbYqiiu7NqjPfjGbyQ7rbLNr2SpZw=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/bonsai/0162.png" 
         alt="kitchen_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh without texture
       </div>
@@ -510,12 +510,12 @@
     <div class="col-xs-12">
     <div class="wrapper" style="text-align: center">
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaB0KNA5RLwm9BOH0OBe4dbj5_BFQ7xLGPxNGERj-bFucFfydfqfHo38SU43forIku7qAXyFkANz-y9Ti_dnzj8MBUi-=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/playroom/playroom_sugar_render_1.png" 
         alt="kitchen_render.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh rendered with bound Gaussians
       </div>
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaBUxsxYk3C_7BfXwfq2euiypqjngxFv6vqFlUuQaVnxl8Zi7JgQzH5Q0vj_73x91kfqW-6zEpKIXJHcZi1PMn3_UgM6ZA=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/playroom/full_sugar_1_200000.png" 
         alt="kitchen_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh without texture
       </div>
@@ -537,12 +537,12 @@
     <div class="col-xs-12">
     <div class="wrapper" style="text-align: center">
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaDH_if3pqgR21mp_9nOYl2IMtlgCO6A-TMfoYSZg_LE4S0RFPfLdYhv9xiSUAgu04VgVgzuHlHlSUlryvECIdKJDIP_=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/counter/counter_sugar_render_2.png" 
         alt="kitchen_render.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh rendered with bound Gaussians
       </div>
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaCe_vWnRNgJxTJTqEL5Ph0XuYNtkGfQky0mNdk4lYsoQH15rNaFxQq10vxS8Zza3bYsbuSBb6dDNhj5pgWodC_UIMsf=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/counter/full_sugar_1_200000.png" 
         alt="kitchen_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh without texture
       </div>
@@ -564,12 +564,12 @@
     <div class="col-xs-12">
     <div class="wrapper" style="text-align: center">
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaDdKfD9UUd8lmZ22-AmapeGgx_HD4l4Ym8b4S9c7dbjCqJTQkPsIKd5IlBogidC7ocDchvd1oeEI49QN-NKHIQapwByuw=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/drjohnson/drjohnson_sugar_render_2.png" 
         alt="kitchen_render.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh rendered with bound Gaussians
       </div>
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaC7Qs4lg5QJsRvqHcOBC5FBTYr6_u9DWN3y82TBTQ1AVVD1RUNyFgypc2HzGVtJRKAswKDSX7sMQ-OYOSRoSwoG_PcHTg=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/drjohnson/full_sugar_1.png" 
         alt="kitchen_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh without texture
       </div>
@@ -591,12 +591,12 @@
     <div class="col-xs-12">
     <div class="wrapper" style="text-align: center">
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaAcCwDighfwpfgw7qcDblPQDHuPJS06LpWIeDMKRwJGK9OBDQGSXRuEwOAfq3bRblXCtdRwMPw1fms7QnJyZ96F6NypwQ=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/room/room_sugar_render_1_decim200000.png" 
         alt="kitchen_render.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh rendered with bound Gaussians
       </div>
       <div class="col-xs-4 col-lg-6">
-        <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaAZAar5q_zpqndnk5mrAm6mWcTAR1P8ELhUXq9ny1zCdUx5zc6JqYT3mTR2eHFglXIUE9ixC8uwFK7YtXF8ixABMltObg=s1600" 
+        <img src="https://anttwo.github.io/sugar/results/room/full_sugar_1_200000.png" 
         alt="kitchen_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
         Mesh without texture
       </div>
