--- a/sugar/index.html
+++ b/sugar/index.html
@@ -361,12 +361,12 @@
      <div class="col-xs-12">
      <div class="wrapper" style="text-align: center">
        <div class="col-xs-4 col-lg-6">
-         <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaAIVi4h4ElOeiqqa4WOTDPNUBQxK29ABqlbVJt5j8Vqne1zi64glEqRgbIFAYWATEgDkHYArIvCElvlbhwuZvJtTpgnKg=s1600" 
+         <img src="https://anttwo.github.io/sugar/results/kitchen/0201.png" 
          alt="kitchen_render.png" class="text-center" style="width: 100%; max-width: 1000px">
          Mesh rendered with bound Gaussians
        </div>
        <div class="col-xs-4 col-lg-6">
-         <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaD-0WRySWq-__R0xh09QA-OiyVrj7WIZEgS630ajL0b-a_El2GKS2U8XI9d8XUI4L72fFygEgGFBHy0BMGC7SnQty1KoA=s1600" 
+         <img src="https://anttwo.github.io/sugar/results/kitchen/0201 (1).png" 
          alt="kitchen_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
          Mesh without texture
        </div>
