--- a/sugar/index.html
+++ b/sugar/index.html
@@ -637,14 +637,12 @@
  <div class="card">
    <div class="card-block">
      <pre class="card-text clickselect">
-@misc{guédon2023sugar,
-      title={SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering}, 
-      author={Antoine Guédon and Vincent Lepetit},
-      year={2023},
-      eprint={2311.12775},
-      archivePrefix={arXiv},
-      primaryClass={cs.GR}
-}</pre>
+      @article{guedon2023sugar,
+        title={SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering},
+        author={Gu{\'e}don, Antoine and Lepetit, Vincent},
+        journal={arXiv preprint arXiv:2311.12775},
+        year={2023}
+      }</pre>
    </div>
  </div>
 
