--- a/MACARONS/index.html
+++ b/MACARONS/index.html
@@ -587,12 +587,13 @@
  <div class="card">
    <div class="card-block">
      <pre class="card-text clickselect">
-@inproceedings{guedon2023macarons,
- title={{MACARONS: Mapping And Coverage Anticipation with RGB ONline Self-supervision}},
- author={Gu&eacutedon, Antoine and Monnier, Tom and Monasse, Pascal and Lepetit, Vincent},
- booktitle={{CVPR}},
- year={2023},
-}</pre>
+      @inproceedings{guedon2023macarons,
+        title={MACARONS: Mapping And Coverage Anticipation with RGB Online Self-Supervision},
+        author={Gu{\'e}don, Antoine and Monnier, Tom and Monasse, Pascal and Lepetit, Vincent},
+        booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+        pages={940--951},
+        year={2023}
+      }</pre>
    </div>
  </div>
 
