--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             I am mostly interested in Image-Based Rendering (IBR) and 3D reconstruction using deep learning approaches. 
             In particular, I worked on developing scalable approaches
             for simultaneously learning to reconstruct and explore 3D environments. 
-            More recently, I have been working on Novel View Synthesis. 
+            More recently, I have been working on Novel View Synthesis and surface reconstruction in radiance fields. 
             Before that, I studied at the Ecole polytechnique as well as the &Eacutecole normale sup&eacuterieure Paris-Saclay 
             where I obtained the MVA MS degree. </p>
     </div>
