--- a/sugar/index.html
+++ b/sugar/index.html
@@ -118,6 +118,9 @@
   <hr/>
   <p>
     <ul>
+      <li> <b>12/20/2023</b>: We've just added a dedicated viewer to explore in real-time scenes reconstructed with SuGaR. 
+        The viewer lets you switch between the hybrid representation (mesh+Gaussians), the textured mesh and the wireframe mesh! </li>
+      <li> <b>12/20/2023</b>: We released the code for SuGaR! </li>
       <li> <b>11/28/2023</b>: <b>We noticed a minor typo in Equation (6) in the earlier version of the paper. We updated the paper on arxiv.</b>
         <br> For any density function <i>d</i> (and not just 
         <SPAN STYLE="text-decoration:overline; font-style:italic">d</SPAN>), we define an ideal distance function
