Updated sugar index.html

--- a/sugar/index.html
+++ b/sugar/index.html
@@ -121,7 +121,7 @@
       <li> <b>12/20/2023</b>: We've just added a dedicated viewer to explore in real-time scenes reconstructed with SuGaR. 
         The viewer lets you switch between the hybrid representation (mesh+Gaussians), the textured mesh and the wireframe mesh! </li>
       <li> <b>12/20/2023</b>: We released the code for SuGaR! </li>
-      <li> <b>11/28/2023</b>: <b>We noticed a minor typo in Equation (6) in the earlier version of the paper. We updated the paper on arxiv.</b>
+      <li> <b>11/28/2023</b>: We noticed a minor typo in Equation (6) in the earlier version of the paper. We updated the paper on arxiv.
         <br> For any density function <i>d</i> (and not just 
         <SPAN STYLE="text-decoration:overline; font-style:italic">d</SPAN>), we define an ideal distance function
         <i>f</i> = <i>s<sub>g<sup>*</sup></sub></i> sqrt(-2log(<i>d</i>)).
