--- a/sugar/index.html
+++ b/sugar/index.html
@@ -53,7 +53,7 @@
 <div class="container" style="text-align:center; padding-top:2rem 15px">
  <div class="row" style="text-align:center">
    <h1 style="font-size: 60px;">SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering</h1>
-   <h1 style="font-size: xxx-large;">arXiv - November 2023</h1>
+   <h1 style="font-size: xxx-large;">CVPR 2024</h1>
  </div>
  <div class="row" style="text-align:center">
    <div class="col-xs-0 col-md-2"></div>
