--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <a href="https://anttwo.github.io/sugar/">
                     <h4>SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering</h4>
                 </a>
-                <p style="font-size: 20px;">arXiv 2023</p>
+                <p style="font-size: 20px;">CVPR 2024</p>
                 <div>
                     <a href="https://anttwo.github.io/"><b>Antoine Gu&eacutedon</b></a>, 
                     <a href="https://vincentlepetit.github.io/">Vincent Lepetit</a>
