SuGaR accepted at CVPR 2024!

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <div class="container">
         <h2>News</h2>
         <hr/>
+        <p class="label date">02-2024</p> <a href="https://anttwo.github.io/sugar/">SuGaR</a> paper has been accepted to CVPR 2024!<br>
         <p class="label date">03-2023</p> <a href="https://anttwo.github.io/MACARONS/">MACARONS</a> paper has been accepted to CVPR 2023!<br>
         <p class="label date">11-2022</p> <a href="https://arxiv.org/abs/2208.10449">SCONE</a> paper has received a Spotlight at NeurIPS 2022!<br>
         <p class="label date">08-2022</p> <a href="https://arxiv.org/abs/2208.10449">SCONE</a> paper has been accepted to NeurIPS 2022!<br>
