--- a/frosting/index.html
+++ b/frosting/index.html
@@ -81,7 +81,7 @@
  <div class="row">
    <div class="col-xs-12">
    <h3 style="text-align:center; padding-bottom:1rem">
-     <a class="label label-info" href="https://arxiv.org/abs/2311.12775"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
+     <a class="label label-info" href="https://arxiv.org"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
      <a class="label label-info" href="https://github.com/Anttwo/Frosting"><i class="fa fa-code fa-lg" style="vertical-align: top; margin-top: 6px"></i>&nbsp;&nbsp;Code (coming soon)</a>
      <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:top;margin-top:6px"></i>&nbsp;&nbsp;BibTeX</a>
    </h3>
@@ -223,7 +223,7 @@
  <div class="row" style="text-align: center">
    <div class="col-xs-4 col-lg-6">
      <h4>Paper</h4>
-     <!-- <a href="https://arxiv.org/abs/2311.12775" style="color:inherit"></a> -->
+     <a href="https://arxiv.org" style="color:inherit"></a>
        <!-- <img src="./paper.png" alt="paper.png" class="text-center" style="max-width:70%; border:0.15em solid;
        border-radius:0.5em;"></a> -->
    </div>
