--- a/frosting/index.html
+++ b/frosting/index.html
@@ -93,21 +93,20 @@
    <!-- <img src="https://anttwo.github.io/sugar/results/full_teaser.png" alt="full_teaser.png" class="text-center" style="width: 99%; max-width: 1920px"> -->
    <!-- <video autoplay loop muted playsinline src="teaser.mp4" style="width:95%; max-width: 900px"></video> -->
    <!--<img src="teaser.gif" alt="teaser.gif" class="text-center" style="width: 95%; max-width: 900px">-->
+   <!-- <iframe class="embed-responsive-item text-center" src="https://www.youtube.com/embed/MAkFyWfiBQo?si=mIN-4Wk3P2sWBG7C" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          style="width:100%; height:540px; clip-path:inset(1px 1px);" allowfullscreen></iframe> -->
+  <i>Video is coming soon.</i>
    <div class="wrapper">
      <!-- <div class="col-xs-4 col-lg-6;"> -->
       <p style="text-align: justify">
-        <br>  </p>
+        <br> We propose to represent surfaces by a mesh covered with a ``Frosting'' layer of varying thickness and made of 3D Gaussians. 
+        This representation captures both complex volumetric effects created by fuzzy materials such as hair or grass as well as flat surfaces. 
+        Built from RGB images only, it can be rendered in real-time and animated using traditional animation tools. </p>
      <!-- </div> -->
    </div>
    </div>
  </div>
-
- <!-- <iframe src="https://drive.google.com/file/d/12Stc42P5pQz6oHt3TXfIy_CSylB075_T/preview" 
-          width=100% height="380px" frameborder="0" allow="autoplay" allowfullscreen></iframe> -->
-  <iframe class="embed-responsive-item text-center" src="https://www.youtube.com/embed/MAkFyWfiBQo?si=mIN-4Wk3P2sWBG7C" frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          style="width:100%; height:540px; clip-path:inset(1px 1px);" allowfullscreen></iframe>   
-
 </div>
 
 <div class="container">
