--- a/frosting/index.html
+++ b/frosting/index.html
@@ -96,7 +96,7 @@
    <!-- <iframe class="embed-responsive-item text-center" src="https://www.youtube.com/embed/MAkFyWfiBQo?si=mIN-4Wk3P2sWBG7C" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           style="width:100%; height:540px; clip-path:inset(1px 1px);" allowfullscreen></iframe> -->
-  <i>Video is coming soon.</i>
+  <i>The presentation video is coming soon.</i>
    <div class="wrapper">
      <!-- <div class="col-xs-4 col-lg-6;"> -->
       <p style="text-align: justify">
@@ -146,6 +146,15 @@
 
  <h2>Reconstructing complex scenes with fuzzy materials</h2>
  <hr/>
+
+ <div class="row" style="text-align: center; padding-bottom:1rem;">
+  <div class="hidden-xs col-md-1"></div>
+  <div class="col-xs-12 col-md-10 text-center">
+  <iframe src="https://drive.google.com/file/d/1Ioe-wJhS5n46hvpdKk42og2gP15Ir31d/preview"
+     width=100% height="270px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+  <div class="hidden-xs col-md-1"></div>
+  </div>
+</div>
 
  <h2>Scene composition</h2>
  <hr/>
