--- a/frosting/index.html
+++ b/frosting/index.html
@@ -81,7 +81,7 @@
  <div class="row">
    <div class="col-xs-12">
    <h3 style="text-align:center; padding-bottom:1rem">
-     <a class="label label-info" href="https://arxiv.org"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
+     <a class="label label-info" href="https://arxiv.org/abs/2403.14554"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
      <a class="label label-info" href="https://github.com/Anttwo/Frosting"><i class="fa fa-code fa-lg" style="vertical-align: top; margin-top: 6px"></i>&nbsp;&nbsp;Code (coming soon)</a>
      <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:top;margin-top:6px"></i>&nbsp;&nbsp;BibTeX</a>
    </h3>
@@ -119,13 +119,14 @@
       <li> <b>03/21/2024</b>: Initial release of the paper. </li>
     </ul>
   </p>
+<!-- </div> -->
 
-<div class="container">
+<!-- <div class="container"> -->
  <h2>Abstract</h2>
  <hr/>
  <p>
     We propose <b>Gaussian Frosting</b>, a novel <b>mesh-based representation</b> for <b>high-quality rendering</b> 
-    and <b>editing of complex 3D effects</b> in real-time. 
+    and <b>editing of complex 3D effects</b> in real-time. <br>
     <br>
     Our approach builds on the recent 
     <a href="https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/">3D Gaussian Splatting (SIGGRAPH 2023)</a> framework, 
@@ -133,48 +134,19 @@
     We propose first extracting a base mesh from Gaussians during optimization, then building and refining 
     an <b>adaptive layer of Gaussians with a variable thickness around the mesh</b> to better capture the fine 
     details and volumetric effects near the surface, such as hair or grass. We call this layer Gaussian Frosting, 
-    as it resembles a coating of frosting on a cake. <b>The fuzzier the material, the thicker the frosting</b>.
+    as it resembles a coating of frosting on a cake. <b>The fuzzier the material, the thicker the frosting</b>. <br>
     <br> 
     We also introduce a parameterization of the Gaussians to enforce them to stay inside the frosting layer and 
     automatically adjust their parameters when deforming, rescaling, editing or animating the mesh. 
     Our representation allows for <b>efficient rendering</b> using Gaussian splatting, as well as <b>editing 
-    and animation</b> by modifying the base mesh.
+    and animation</b> by modifying the base mesh.<br>
     <br> 
     We demonstrate the effectiveness of our method on various synthetic and real scenes, 
     and show that it outperforms existing surface-based approaches.
  </p>
+<!-- </div> -->
 
  <p><br></p>
-
- <h2>Reconstructing complex scenes with fuzzy materials</h2>
- <hr/>
-
- <div class="row" style="text-align:center">
-  <div class="col-xs-4 col-lg-4">
-    <img src="https://anttwo.github.io/frosting/results/closeup/khady_gt_22_detail.png" 
-    alt="gt_detail.png" class="text-center" style="width: 100%; max-width: 1000px">
-    <p style="text-align:center">(a) Ground Truth</p>
-  </div>
-  <div class="col-xs-4 col-lg-4">
-   <img src="https://anttwo.github.io/frosting/results/closeup/khady_gt_22_detail.png" 
-   alt="3dgs_detail.png" class="text-center" style="width: 100%; max-width: 1000px">
-   <p style="text-align:center">(b) 3D Gaussian Splatting</p>
- </div>
- <div class="col-xs-4 col-lg-4">
-   <img src="https://anttwo.github.io/frosting/results/closeup/khady_gt_22_detail.png" 
-   alt="frosting_detail.png" class="text-center" style="width: 100%; max-width: 1000px">
-   <p style="text-align:center">(c) Frosting (Ours)</p>
- </div>
-</div>
-
- <div class="row" style="text-align: center; padding-bottom:1rem;">
-  <div class="hidden-xs col-md-1"></div>
-  <div class="col-xs-12 col-md-10 text-center">
-  <iframe src="https://drive.google.com/file/d/1Ioe-wJhS5n46hvpdKk42og2gP15Ir31d/preview"
-     width=50% height="270px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
-  <div class="hidden-xs col-md-1"></div>
-  </div>
-</div>
 
  <h2>Scene composition</h2>
  <hr/>
@@ -189,6 +161,40 @@
 
  <h2>Animation</h2>
  <hr/>
+
+ <h2>Reconstructing complex scenes with fuzzy materials</h2>
+ <hr/>
+
+ <div class="row" style="text-align: center; padding-bottom:1rem;">
+  <div class="hidden-xs col-md-1"></div>
+  <div class="col-xs-12 col-md-10 text-center">
+  <iframe src="https://drive.google.com/file/d/1Ioe-wJhS5n46hvpdKk42og2gP15Ir31d/preview"
+     width=100% height="540px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+  <div class="hidden-xs col-md-1"></div>
+  </div>
+</div>
+
+<p>
+  <!-- Our representation -->
+</p>
+
+ <div class="row" style="text-align:center">
+  <div class="col-xs-4 col-lg-4">
+    <img src="https://anttwo.github.io/frosting/results/closeup/khady_gt_22_detail.png" 
+    alt="gt_detail.png" class="text-center" style="width: 100%; max-width: 1000px">
+    <p style="text-align:center">(a) Ground Truth</p>
+  </div>
+  <div class="col-xs-4 col-lg-4">
+   <img src="https://anttwo.github.io/frosting/results/closeup/khady_3dgs_22_detail.png" 
+   alt="3dgs_detail.png" class="text-center" style="width: 100%; max-width: 1000px">
+   <p style="text-align:center">(b) 3D Gaussian Splatting</p>
+ </div>
+ <div class="col-xs-4 col-lg-4">
+   <img src="https://anttwo.github.io/frosting/results/closeup/khady_rgb_22_detail.png" 
+   alt="frosting_detail.png" class="text-center" style="width: 100%; max-width: 1000px">
+   <p style="text-align:center">(c) Frosting (Ours)</p>
+ </div>
+</div>
 
  <h2>Gaussian <b style="color:#448D87">Frosting</b>: Editable Complex Radiance Fields with Real-Time Rendering
  </h2>
@@ -314,7 +320,7 @@
  <div class="row" style="text-align: center">
    <div class="col-xs-4 col-lg-6">
      <h4>Paper</h4>
-     <a href="https://arxiv.org" style="color:inherit"></a>
+     <a href="https://arxiv.org/abs/2403.14554" style="color:inherit"></a>
        <!-- <img src="./paper.png" alt="paper.png" class="text-center" style="max-width:70%; border:0.15em solid;
        border-radius:0.5em;"></a> -->
    </div>
@@ -352,9 +358,9 @@
  If you like this project, check out our previous works related to 3D reconstruction:
  <ul>
     <li>
-        <a href="https://anttwo.github.io/sugar/">Gu&eacutedon et Lepetit. - 
-          SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering
-          (CVPR 2024)</a>
+      <a href="https://anttwo.github.io/sugar/">Gu&eacutedon et Lepetit. - 
+        SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering
+        (CVPR 2024)</a>
     </li>
    <li>
     <a href="https://anttwo.github.io/MACARONS/">Gu&eacutedon et al. - 
