--- a/frosting/index.html
+++ b/frosting/index.html
@@ -164,14 +164,17 @@
 
  <h2>Reconstructing complex scenes with fuzzy materials</h2>
  <hr/>
-
- <div class="row" style="text-align: center; padding-bottom:1rem;">
-  <div class="hidden-xs col-md-1"></div>
-  <div class="col-xs-12 col-md-10 text-center">
-  <iframe src="https://drive.google.com/file/d/1Ioe-wJhS5n46hvpdKk42og2gP15Ir31d/preview"
-     width=100% height="540px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
-  <div class="hidden-xs col-md-1"></div>
+<div class="row" style="text-align:center">
+  <div class="col-xs-4 col-lg-6">
+    <iframe src="https://drive.google.com/file/d/1Ioe-wJhS5n46hvpdKk42og2gP15Ir31d/preview"
+     width=100% height="310px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+    <p style="text-align:center">(a) Rendering</p>
   </div>
+  <div class="col-xs-4 col-lg-6">
+    <img src="https://anttwo.github.io/frosting/results/normals/sirius1_normals_52_bis.png" 
+    alt="sleepycat_normals.png" class="text-center" style="width: 100%; max-width: 1000px">
+   <p style="text-align:center">(b) Normals</p>
+ </div>
 </div>
 
 <p>
