--- a/frosting/index.html
+++ b/frosting/index.html
@@ -96,7 +96,7 @@
           style="width:100%; height:540px; clip-path:inset(1px 1px);" allowfullscreen></iframe> -->
   <iframe src="https://drive.google.com/file/d/1PprM89bC8_iXpen21-sxX50rPkwKff0i/preview"
      width=100% height="620px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
-  <i>The full presentation video is coming soon.</i>
+  <i><b>The full presentation video is coming soon.</b></i>
    <div class="wrapper">
      <!-- <div class="col-xs-4 col-lg-6;"> -->
       <p style="text-align: justify">
@@ -267,25 +267,30 @@
  </div>
 </div>
 
+<br>
+
 <p>
-  <!-- Our representation -->
+  Frosting reaches the better rendering performance than other editable radiance field methods, 
+  and obtains competitive results compared to vanilla 3D Gaussian Splatting. 
+  Frosting is even able to outperform vanilla 3DGS when reconstructing scenes with many fuzzy materials,
+  such as the scenes from the <a href="https://research.nvidia.com/labs/toronto-ai/adaptive-shells/">Shelly dataset</a>.
 </p>
 
  <div class="row" style="text-align:center">
   <div class="col-xs-4 col-lg-4">
     <img src="https://anttwo.github.io/frosting/results/closeup/khady_gt_22_detail.png" 
     alt="gt_detail.png" class="text-center" style="width: 100%; max-width: 1000px">
-    <p style="text-align:center">(a) Ground Truth</p>
+    <p style="text-align:center">(c) Ground Truth</p>
   </div>
   <div class="col-xs-4 col-lg-4">
    <img src="https://anttwo.github.io/frosting/results/closeup/khady_3dgs_22_detail.png" 
    alt="3dgs_detail.png" class="text-center" style="width: 100%; max-width: 1000px">
-   <p style="text-align:center">(b) 3D Gaussian Splatting</p>
+   <p style="text-align:center">(d) 3D Gaussian Splatting</p>
  </div>
  <div class="col-xs-4 col-lg-4">
    <img src="https://anttwo.github.io/frosting/results/closeup/khady_rgb_22_detail.png" 
    alt="frosting_detail.png" class="text-center" style="width: 100%; max-width: 1000px">
-   <p style="text-align:center">(c) Frosting (Ours)</p>
+   <p style="text-align:center">(e) Frosting (Ours)</p>
  </div>
 </div>
 
