--- a/frosting/index.html
+++ b/frosting/index.html
@@ -124,7 +124,7 @@
  <h2>Abstract</h2>
  <hr/>
  <p>
-    We propose <b>Gaussian Frosting</b>, a novel <b>mesh-based representation</b> for <b>high-quality rendering</b> 
+    We propose <b>Gaussian Frosting</b>–or <b>Frosting</b>, for short–, a novel <b>mesh-based representation</b> for <b>high-quality rendering</b> 
     and <b>editing of complex 3D effects</b> in real-time. <br>
     <br>
     Our approach builds on the recent 
