--- a/frosting/index.html
+++ b/frosting/index.html
@@ -449,7 +449,7 @@
       @article{guedon2024frosting,
         title={Gaussian Frosting: Editable Complex Radiance Fields with Real-Time Rendering},
         author={Gu{\'e}don, Antoine and Lepetit, Vincent},
-        journal={TODO},
+        journal={arXiv preprint arXiv:2403.14554},
         year={2024}
       }</pre>
    </div>
