--- a/index.html
+++ b/index.html
@@ -112,6 +112,48 @@
         <h2>Publications</h2>
         <hr/>
 
+        <!-- Frosting -->
+        <div class="container" style="text-align:left; padding-top: 2rem; padding-bottom: 2rem;">
+            <div class="col-lg-4" style="text-align:left; padding-top: 2rem;">
+                <a href="https://anttwo.github.io/frosting/">
+                    <img src="./media/frosting.png" alt="frosting" style="width: 350px;">
+                </a>
+            </div>
+            <div  class="col-lg-8" style="text-align: left;">
+                <a href="https://anttwo.github.io/frosting/">
+                    <h4>Gaussian Frosting: Editable Complex Radiance Fields with Real-Time Rendering</h4>
+                </a>
+                <p style="font-size: 20px;">arXiv 2024</p>
+                <div>
+                    <a href="https://anttwo.github.io/"><b>Antoine Gu&eacutedon</b></a>, 
+                    <a href="https://vincentlepetit.github.io/">Vincent Lepetit</a>
+                </div>
+                We propose to represent surfaces by a mesh covered with a "Frosting" layer of varying thickness and made of 3D Gaussians. 
+                This representation captures both complex volumetric effects created by fuzzy materials such as hair or grass as well as flat surfaces. 
+                Built from RGB images only, it can be rendered in real-time and animated using traditional animation tools. <br>
+                <a class="label label-info" href="https://arxiv.org/abs/2403.14554"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
+                <a class="label label-info" href="https://github.com/Anttwo/Frosting"><i class="fa fa-code fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Code (coming soon)</a>
+                <!-- <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX</a> -->
+                <a class="label label-info" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                    <i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX
+                </a>
+                <div class="collapse" id="collapse3">
+                    <div class="card">
+                        <div class="card-block">
+                            <pre class="card-text clickselect">
+                                @article{guedon2024frosting,
+                                    title={Gaussian Frosting: Editable Complex Radiance Fields with Real-Time Rendering},
+                                    author={Gu{\'e}don, Antoine and Lepetit, Vincent},
+                                    journal={arXiv preprint arXiv:2403.14554},
+                                    year={2024}
+                              }
+                        </div>
+                      </div>
+                </div>
+
+            </div>
+        </div><br>
+        
         <!-- SuGaR -->
         <div class="container" style="text-align:left; padding-top: 2rem; padding-bottom: 2rem;">
             <div class="col-lg-4" style="text-align:left; padding-top: 2rem;">
