--- a/frosting/index.html
+++ b/frosting/index.html
@@ -245,10 +245,17 @@
   </div>
 </div>
 
-<!-- <p><br></p>
+<p><br></p>
 
  <h2>Animation</h2>
- <hr/> -->
+ <hr/>
+ <div class="row" style="text-align:center">
+  <div class="col-xs-4 col-lg-12">
+    <iframe src="https://drive.google.com/file/d/1xeKcZ0g2yXmkIAEFCGd3qPgcFT1l3kq7/preview"
+     width=50% height="310px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+    <p style="text-align:center">(a) A knight practicing fencing </p>
+  </div>
+</div>
 
 <p><br></p>
 
